7 February 2008: Wouter
	- moved up all current level 2 to be level 3. And 3 to 4.
	  to make room for new debug level 2 for detailed information 
	  for operators.
	- verbosity level 2. Describes recursion and validation.
	- cleaner configure script and fixes for libevent solaris.
	- signedness for log output memory sizes in high verbosity.

6 February 2008: Wouter
	- clearer explanation of threading configure options.
	- fixup asynclook test for nothreading (it creates only one process
	  to do the extended test).
	- changed name of ub_val_result_free to ub_val_resolve_free.
	- removes warning message during library linking, renamed
	  libunbound/unbound.c -> libunbound.c and worker to libworker.
	- fallback without EDNS if result is NOTIMPL as well as on FORMERR.

5 February 2008: Wouter
	- statistics-interval: seconds option added.
	- test for statistics option
	- ignore errors making directories, these can occur in parallel builds
	- fixup Makefile strip command and libunbound docs typo.

31 January 2008: Wouter
	- bg thread/process reads and writes the pipe nonblocking all the time
	  so that even if the pipe is buffered or so, the bg thread does not
	  block, and services both pipes and queries.

30 January 2008: Wouter
	- check trailing / on chrootdir in checkconf.
	- check if root hints and anchor files are in chrootdir.
	- no route to host tcp error is verbosity level 2. 
	- removed unused send_reply_iov. and its configure check.
	- added prints of 'remote address is 1.2.3.4 port 53' to errors
	  from netevent; the basic socket errors.

28 January 2008: Wouter
	- fixup uninit use of buffer by libunbound (query id, flags) for
	  local_zone answers.
	- fixup uninit warning from random.c; also seems to fix sporadic
	  sigFPE coming out of openssl.
	- made openssl entropy warning more silent for library use. Needs
	  verbosity 1 now.
	- fixup forgotten locks for rbtree_searches on ctx->query tree.